--- a/index.html
+++ b/index.html
@@ -61,6 +61,13 @@
   button:hover {
     background-color: #767575;
   }
+  .link-button {
+    text-decoration: none;
+  }
+  
+  .link-button button {
+    width: 100%; 
+  }
 </style>
 </head>
 <body>
@@ -68,7 +75,9 @@
 <div class="container">
   <h1>Product Insight 🔮</h1>
   <p>Get 10x more from your qualitative data </p>
-  <button>Try the Beta </button>
+  <a href="https://app.productinsight.io" class="link-button">
+    <button>Try the Beta </button>
+  </a>
 </div>
 </body>
 </html>
